# haunt

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.sh
.cargo/: config.toml
.github/workflows/: binaries.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  session.rs
crates/core/: Cargo.toml
crates/core/src/: dsl.rs  events.rs  lib.rs  log.rs  logs.rs  thread_role.rs
crates/core/src/schema/: ast.rs  diag.rs  layout.rs  mod.rs  parse.rs  registry.rs  validate.rs
crates/inject/: Cargo.toml
crates/inject/src/: main.rs
crates/windows/: Cargo.toml
crates/windows/src/: lib.rs  log.rs  modules.rs  process.rs  regions.rs  safe_read.rs  stack.rs
crates/windows/src/breakpoint/: halt.rs  hardware.rs  mod.rs  page.rs  software.rs  veh.rs
crates/windows/src/breakpoint/arch/: mod.rs  x64.rs  x86.rs
