[package]
name = "haunt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line client for the haunt agent's HTTP protocol."
readme = "../../README.md"

[[bin]]
name = "haunt"
path = "src/main.rs"
