[package]
name = "haunt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line client for the haunt agent's HTTP protocol."
readme = "../../README.md"

[dependencies]
haunt-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "haunt"
path = "src/main.rs"
