[package]
name = "haunt-inject"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Load haunt.dll into a running Windows process via CreateRemoteThread(LoadLibraryA)."
readme = "../../README.md"

[[bin]]
name = "haunt-inject"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
]
