[package]
name = "haunt-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Windows agent cdylib for haunt. Produces haunt.dll."
publish = false

[lib]
name = "haunt"
crate-type = ["cdylib"]

[dependencies]
haunt-core.workspace = true

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Threading",
]
